# auto_build

./: CMakeLists.txt  README.md
.github/workflows/: main.yaml  main.yml
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  VersionInfo.rc  VersionInfo.rc.in  builder.py  encipher.cpp  resource.h  zhudong
CMakeProject1/cmake_env/: res_var.cmake
CMakeProject1/fake_version/: res.json
hello/: CMakeLists.txt  hello.cpp  hello.h
