# CMakeList.txt: 顶层 CMake 项目文件，在此处执行全局配置
# 并包含子项目。
#
cmake_minimum_required (VERSION 3.7)

project(linker_test CXX)
option(BUILD_DEBUG "Build debug version" OFF)
option(CMAKE_DEBUG "Build debug version makefile" ON)

if(${CMAKE_DEBUG})
    MESSAGE("Debug makefile ...")
    set(CMAKE_VERBOSE_MAKEFILE ON CACHE INTERNAL "" FORCE)

endif()

if(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_DEBUG} /MT /O2 /Ob2 /D NDEBUG ")
    set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO} /INCREMENTAL:NO /MANIFEST:NO /DEBUG:FULL" )

    string(REGEX REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
    string(REGEX REPLACE "/Zi" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
endif()
# string(REGEX REPLACE "/debug" "" CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO}") #去除

set(CMAKE_CXX_STANDARD 20)

add_subdirectory("CMakeProject1")
add_subdirectory("hello")
set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}")

INSTALL(
    TARGETS CMakeProject1 hello
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION bin
    ARCHIVE DESTINATION bin 
)